--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
  </head>
 
  <body id="siteBody" onclick="closeSFX(event)">
+   <div id="easterEgg" style="position: fixed; top: -15px; right: 25px; z-index: -10; color: rgb(235, 235, 235);">&#65;&#72;&#43;&#83;&#66;=&#x2764;</div>
    <div class="backgroundHue" id="backgroundHue"></div>
    <div class="backgroundBrightness" id="backgroundBrightness"></div>
    <div class="topbarNav" id="topbarNav">
