--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       <a href="Maybi_RedBall4.html">Red Ball 4</a>
       <a href="Maybi_RedBall4Vol2.html">Red Ball 4 Vol 2</a>
       <a href="Maybi_RedBall4Vol3.html">Red Ball 4 Vol 3</a>
+      <a href="RBV3SR.html">RB4V3SR</a>
       <a href="Maybi_RedBall5.html">Red Ball 5</a>
       <a href="Maybi_ReturnMan2.html">Return Man 2</a>
       <a href="Maybi_Run.html">Run</a>
