--- a/index.html
+++ b/index.html
@@ -3,63 +3,72 @@
     <title>Maybi Games</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
     <style>
-        body {
-          margin: 0px;
-          cursor: default;
-          user-select: none;
-          background-color: #ffd5c1;
-        }
+      body {
+        margin: 0px;
+        cursor: default;
+        user-select: none;
+      }
 
-        .header {
-          width: 100vw;
-          height: 170px;
-          background-color: #1e1f26;
-          position: fixed;
-          line-height: 170px;
-          top: 0px;
-          left: 0px;
-          white-space: nowrap;
-          z-index: 1;
-        }
+      .background {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 100vw;
+        height: 100vw;
+        z-index: -1;
+        background-color: #ffd5c1;
+      }
 
-        .siteTitle {
-          font-size: 60px;
-          font-family: Quicksand;
-          color: white;
-          padding: 0px 0px 0px 10%;
-          margin: 0px;
-        }
+      .header {
+        width: 100vw;
+        height: 170px;
+        background-color: #1e1f26;
+        position: fixed;
+        line-height: 170px;
+        top: 0px;
+        left: 0px;
+        white-space: nowrap;
+        z-index: 1;
+      }
 
-        .gameLinks {
-          margin-bottom: 25px;
-          padding-top: 180px;
-        }
+      .siteTitle {
+        font-size: 60px;
+        font-family: Quicksand;
+        color: white;
+        padding: 0px 0px 0px 10%;
+        margin: 0px;
+      }
 
-        .gameLinks a {
-          background-color: #e8692e;
-          overflow: hidden;
-          height: 60px;
-          filter: brightness(94%);
-          width: 45vw;
-          margin: 1vh 0px 0px 3vw;
-          border-radius: 10px;
-          text-align: center;
-          line-height: 60px;
-          color: white;
-          font-size: 20px;
-          font-family: Quicksand;
-          text-decoration: none;
-          display: inline-block;
-          white-space: nowrap;
-        }
+      .gameLinks {
+        margin-bottom: 25px;
+        padding-top: 180px;
+      }
 
-        .gameLinks a:hover {
-          filter: brightness(90%);
-        }
+      .gameLinks a {
+        background-color: #e8692e;
+        overflow: hidden;
+        height: 60px;
+        filter: brightness(94%);
+        width: 45vw;
+        margin: 1vh 0px 0px 3vw;
+        border-radius: 10px;
+        text-align: center;
+        line-height: 60px;
+        color: white;
+        font-size: 20px;
+        font-family: Quicksand;
+        text-decoration: none;
+        display: inline-block;
+        white-space: nowrap;
+      }
+
+      .gameLinks a:hover {
+        filter: brightness(90%);
+
+      }
     </style>
     <script>
     window.onscroll = function() {scrollFunction()};
-
     function scrollFunction() {
       if (document.body.scrollTop < 100) {
         document.getElementById("header").style.height = 170 - document.body.scrollTop;
@@ -68,13 +77,35 @@
         document.getElementById("siteTitle").style.paddingLeft = (10 - document.body.scrollTop / 20) + "%";
       }
     }
+
+    function colorLinks() {
+      var links = document.getElementsByTagName("a");
+      var d = new Date();
+      var n = d.getDay();
+      if (n == 1) {
+        n = 90;
+      } else if (n == 2) {
+        n = 120;
+      } else if (n == 3) {
+        n = 180;
+      } else if (n == 4) {
+        n = 230;
+      } else if (n == 5) {
+        n = 280;
+      } else if (n == 6) {
+        n = 320;
+      }
+      document.getElementById("gameLinks").style.filter = "hue-rotate(" + n + "deg)";
+      document.getElementById("background").style.filter = "hue-rotate(" + n + "deg)";
+    }
     </script>
   </head>
-  <body>
+  <body onload="colorLinks()">
+    <div class="background" id="background"></div>
     <div class="header" id="header">
       <h3 class="siteTitle" id="siteTitle">Maybi Games</h3>
     </div>
-    <div class="gameLinks">
+    <div class="gameLinks" id="gameLinks">
       <a href="Maybi_2048.html">2048</a>
       <a href="Maybi_AgeOfDefense3.html">Age of Defense 3</a>
       <a href="Maybi_AgeOfWar.html">Age of War</a>
@@ -123,6 +154,7 @@
       <a href="Maybi_StickWar2.html">Stick War 2</a>
       <a href="Maybi_SushiCat.html">Sushi Cat</a>
       <a href="Maybi_TankTrouble.html">Tank Trouble</a>
-      <a href="Maybi_Tetris.html">Tetris</a></div>
+      <a href="Maybi_Tetris.html">Tetris</a>
+    </div>
   </body>
 </html>
