--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         cursor: default;
         user-select: none;
       }
-
       .background {
         position: fixed;
         top: 0px;
@@ -18,7 +17,6 @@
         z-index: -1;
         background-color: #ffd5c1;
       }
-
       .header {
         width: 100vw;
         height: 170px;
@@ -30,7 +28,6 @@
         white-space: nowrap;
         z-index: 1;
       }
-
       .siteTitle {
         font-size: 60px;
         font-family: Quicksand;
@@ -38,19 +35,17 @@
         padding: 0px 0px 0px 10%;
         margin: 0px;
       }
-
       .gameLinks {
         margin-bottom: 25px;
         padding-top: 180px;
       }
-
       .gameLinks a {
         background-color: #e8692e;
         overflow: hidden;
         height: 60px;
         filter: brightness(94%);
         width: 45vw;
-        margin: 1vh 0px 0px 3vw;
+        margin: 1vh 1px 0px 3vw;
         border-radius: 10px;
         text-align: center;
         line-height: 60px;
@@ -60,11 +55,11 @@
         text-decoration: none;
         display: inline-block;
         white-space: nowrap;
+        transition: 0.3s;
       }
-
       .gameLinks a:hover {
-        filter: brightness(90%);
-
+        width: 47vw;
+        margin-left: 1vw;
       }
     </style>
     <script>
@@ -77,7 +72,6 @@
         document.getElementById("siteTitle").style.paddingLeft = (10 - document.body.scrollTop / 20) + "%";
       }
     }
-
     function colorLinks() {
       var links = document.getElementsByTagName("a");
       var d = new Date();
