--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
       <a href="Maybi_AgeOfDefense3.html">Age of Defense 3</a>
       <a href="Maybi_AgeOfWar.html">Age of War</a>
       <a href="Maybi_AgeOfWar2.html">Age of War 2</a>
+      <a href="Maybi_BattlePanic.html">Battle Panic</a>
+      <a href="Maybi_BMXMaster.html">BMX Master</a>
       <a href="Maybi_BTD3.html">Bloons TD 3</a>
       <a href="Maybi_BTD4.html">Bloons TD 4</a>
       <a href="Maybi_BTD5.html">Bloons TD 5</a>
@@ -129,6 +131,7 @@
       <a href="Maybi_Jacksmith.html">Jacksmith</a>
       <a href="Maybi_KingdomRush.html">Kingdom Rush</a>
       <a href="Maybi_Pacman.html">Pacman</a>
+      <a href="Maybi_Pacxon.html">Pacxon</a>
       <a href="Maybi_Burgeria.html">Papa's Burgeria</a>
       <a href="Maybi_Cupcakeria.html">Papa's Cupcakeria</a>
       <a href="Maybi_Freezeria.html">Papa's Freezeria</a>
@@ -136,6 +139,7 @@
       <a href="Maybi_Pancakeria.html">Papa's Pancakeria</a>
       <a href="Maybi_Pizzaria.html">Papa's Pizzaria</a>
       <a href="Maybi_Wingeria.html">Papa's Wingeria</a>
+      <a href="Maybi_QWOP.html">QWOP</a>
       <a href="Maybi_Raze.html">Raze</a>
       <a href="Maybi_RedBall4.html">Red Ball 4</a>
       <a href="Maybi_RedBall4Vol2.html">Red Ball 4 Vol 2</a>
@@ -146,6 +150,7 @@
       <a href="Maybi_Run2.html">Run 2</a>
       <a href="Maybi_StickWar.html">Stick War</a>
       <a href="Maybi_StickWar2.html">Stick War 2</a>
+      <a href="Maybi_SuperMonkey.html">Super Monkey</a>
       <a href="Maybi_SushiCat.html">Sushi Cat</a>
       <a href="Maybi_TankTrouble.html">Tank Trouble</a>
       <a href="Maybi_Tetris.html">Tetris</a>
