--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
       <a href="Maybi_AgeOfWar.html">Age of War</a>
       <a href="Maybi_AgeOfWar2.html">Age of War 2</a>
       <a href="Maybi_BattlePanic.html">Battle Panic</a>
+      <a href="Maybi_Bearbarians.html">Bearbarians</a>
       <a href="Maybi_BMXMaster.html">BMX Master</a>
       <a href="Maybi_BTD3.html">Bloons TD 3</a>
       <a href="Maybi_BTD4.html">Bloons TD 4</a>
