--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
         transition: 0.3s;
       }
       .gameLinks a:hover {
-        width: 47vw;
+        width: 48vw;
         margin-left: 1vw;
+        margin-right: -1vw;
       }
     </style>
     <script>
