--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
       <a href="Maybi_BattlePanic.html">Battle Panic</a>
       <a href="Maybi_Bearbarians.html">Bearbarians</a>
       <a href="Maybi_BMXMaster.html">BMX Master</a>
+      <a href="Maybi_Bloons.html">Bloons</a>
+      <a href="Maybi_Bloons2.html">Bloons 2</a>
+      <a href="Maybi_BloonsPlayerPack.html">Bloons Player Pack</a>
+      <a href="Maybi_BloonsPlayerPack2.html">Bloons Player Pack 2</a>
+      <a href="Maybi_BloonsPlayerPack3.html">Bloons Player Pack 3</a>
+      <a href="Maybi_BloonsPlayerPack4.html">Bloons Player Pack 4</a>
+      <a href="Maybi_BloonsPlayerPack5.html">Bloons Player Pack 5</a>
       <a href="Maybi_BTD3.html">Bloons TD 3</a>
       <a href="Maybi_BTD4.html">Bloons TD 4</a>
       <a href="Maybi_BTD5.html">Bloons TD 5</a>
