--- a/index.html
+++ b/index.html
@@ -123,7 +123,11 @@
       <a href="Maybi_BTD3.html">Bloons TD 3</a>
       <a href="Maybi_BTD4.html">Bloons TD 4</a>
       <a href="Maybi_BTD5.html">Bloons TD 5</a>
+      <a href="Maybi_BombABomb.html">Bomb A Bomb</a>
       <a href="Maybi_ClickerHeroes.html">Clicker Heroes</a>
+      <a href="Maybi_CrashingTheBeard.html">Crashing The Beard</a>
+      <a href="Maybi_Curveball.html">Curveball</a>
+      <a href="Maybi_DanceOfTheRobots.html">Dance of The Robots</a>
       <a href="Maybi_DuckHunt.html">Duck Hunt</a>
       <a href="Maybi_DuckLife.html">Duck Life</a>
       <a href="Maybi_DuckLife2.html">Duck Life 2</a>
@@ -154,6 +158,8 @@
       <a href="Maybi_Pizzaria.html">Papa's Pizzaria</a>
       <a href="Maybi_Wingeria.html">Papa's Wingeria</a>
       <a href="Maybi_QWOP.html">QWOP</a>
+      <a href="Maybi_RaftWars.html">Raft Wars</a>
+      <a href="Maybi_RaftWars2.html">Raft Wars 2</a>
       <a href="Maybi_Raze.html">Raze</a>
       <a href="Maybi_RedBall4.html">Red Ball 4</a>
       <a href="Maybi_RedBall4Vol2.html">Red Ball 4 Vol 2</a>
