--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         margin-left: 1vw;
         margin-right: -2vw;
       }
+      h1 {
+        display: none;
+      }
     </style>
     <script>
     window.onscroll = function() {scrollFunction()};
@@ -103,6 +106,7 @@
   <body onload="colorLinks()">
     <div class="background" id="background"></div>
     <div class="header" id="header">
+      <h1>Maybi Games - This site has over 50 unblocked games you can play anytime! No site ads!</h1>
       <h3 class="siteTitle" id="siteTitle">Maybi Games</h3>
     </div>
     <div class="gameLinks" id="gameLinks">
