--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     </div>
     <div class="gameLinks" id="gameLinks">
       <a href="Maybi_2048.html">2048</a>
+      <a href="Maybi_Achilles.html">Achilles</a>
       <a href="Maybi_AgeOfDefense3.html">Age of Defense 3</a>
       <a href="Maybi_AgeOfWar.html">Age of War</a>
       <a href="Maybi_AgeOfWar2.html">Age of War 2</a>
@@ -150,8 +151,10 @@
       <a href="Maybi_IceTemple.html">FB & WG Ice Temple</a>
       <a href="Maybi_LightTemple.html">FB & WG Light Temple</a>
       <a href="Maybi_Flight.html">Flight</a>
+      <a href="Maybi_Grid16.html">Grid 16</a>
       <a href="Maybi_Jacksmith.html">Jacksmith</a>
       <a href="Maybi_KingdomRush.html">Kingdom Rush</a>
+      <a href="Maybi_LineGameOrange.html">Line Game Orange</a>
       <a href="Maybi_Pacman.html">Pacman</a>
       <a href="Maybi_Pacxon.html">Pacxon</a>
       <a href="Maybi_Burgeria.html">Papa's Burgeria</a>
@@ -178,6 +181,12 @@
       <a href="Maybi_SushiCat.html">Sushi Cat</a>
       <a href="Maybi_TankTrouble.html">Tank Trouble</a>
       <a href="Maybi_Tetris.html">Tetris</a>
+      <a href="Maybi_Vex.html">Vex</a>
+      <a href="Maybi_Vex2.html">Vex 2</a>
+      <a href="Maybi_WorldsHardestGame.html">Worlds's Hardest Game</a>
+      <a href="Maybi_WorldsHardestGame2.html">Worlds's Hardest Game 2</a>
+      <a href="Maybi_Zombocalypse.html">Zombocalypse</a>
+      <a href="Maybi_Zombocalypse2.html">Zombocalypse 2</a>
     </div>
   </body>
 </html>
