--- a/Maybi_2048.html
+++ b/Maybi_2048.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <title>2048</title>
+    <title>2048 | Maybi Games</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="Maybi_GameStyles.css">
     <script src="Maybi_GameScripts.js"></script>
