--- a/Maybi_Bloons2.html
+++ b/Maybi_Bloons2.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <title>Bloons 2</title>
+    <title>Bloons 2 | Maybi Games</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="Maybi_GameStyles.css">
     <script src="Maybi_GameScripts.js"></script>
