--- a/Maybi_CrashingTheBeard.html
+++ b/Maybi_CrashingTheBeard.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <title>Crashing The Beard</title>
+    <title>Castle Crashing The Beard | Maybi Games</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="Maybi_GameStyles.css">
     <script src="Maybi_GameScripts.js"></script>
@@ -14,7 +14,7 @@
     </div>
     <div class="gameContainer">
       <center>
-        <h3 style="font-family: Montserrat">Crashing The Beard</h3>
+        <h3 style="font-family: Montserrat">Castle Crashing The Beard</h3>
         <embed src="Maybi_CrashingTheBeard.swf" id="game" style="height: 480; width: 640;"><br>
         <button onclick="shrinkGame()" style="background-color: rgb(255, 160, 160)">&#8594;&#8592;</button>
         <button onclick="growGame()" style="background-color: rgb(160, 255, 160)">&#8592;&#8594;</button>
