--- a/Maybi_FancyPants2.html
+++ b/Maybi_FancyPants2.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <head>
+    <title>Fancy Pants 2 | Maybi Games</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="Maybi_GameStyles.css">
     <script src="Maybi_GameScripts.js"></script>
